# azpy-Cu

./: pyproject.toml
hse06/100_top_45/: geometry.in
hse06/110_l_bridge_45/: control.in  geometry.in
hse06/ref/100/: control.in
hse06/ref/100_sp/: control.in  geometry.in
hse06/ref/110_sp/: control.in  geometry.in
hse06/ref/azpy/: control.in  geometry.in
hse06/ref/azpy_sp/: control.in
pbe/: ads_calcs.py  auto_calc.sh  full_run_info.txt
pbe/100/bridge_0/: ads_info.txt  energy_info.txt  geometry.in  geometry.in.next_step  hessian.aims  slurm-2735577.out
pbe/100/bridge_45/: ads_info.txt  azpy.in  geometry.in  hessian.aims  slurm-2735578.out
pbe/100/bridge_90/: ads_info.txt  energy_info.txt  geometry.in  geometry.in.next_step  hessian.aims  slurm-2735579.out
pbe/100/hollow_0/: ads_info.txt  geometry.in  hessian.aims  slurm-2735580.out
pbe/100/hollow_45/: Cu_100.in  ads_info.txt  geometry.in  hessian.aims  slurm-2735581.out
pbe/100/top_0/: ads_info.txt  energy_info.txt  geometry.in  geometry.in.next_step  hessian.aims  slurm-2735582.out
pbe/100/top_45/: ads_info.txt  energy_info.txt  geometry.in  geometry.in.next_step  hessian.aims  slurm-2735583.out
pbe/110/hollow_0/: ads_info.txt  energy_info.txt  geometry.in  geometry.in.next_step  hessian.aims  slurm-2737485.out
pbe/110/hollow_45/: ads_info.txt  geometry.in  geometry.in.next_step  hessian.aims  slurm-2737486.out
pbe/110/hollow_90/: ads_info.txt  energy_info.txt  geometry.in  geometry.in.next_step  hessian.aims  slurm-2737487.out
pbe/110/l_bridge_0/: ads_info.txt  energy_info.txt  (+4 more)
(+127 files in other folders)
